--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<div class="derecha">
 
 			<!-- Imagen de fondo -->
-			<img class="imagen_fondo" src="imagenes./fondo_pantalla.jpg" height="600" width="1100">
+			<img class="imagen_fondo" src="imagenes/fondo_pantalla.jpg" height="600" width="1100">
 
 			<!-- Mi informacion -->
 			<div id="homee" class="perfil">
